crates/solidity-v2/testing/snapshots/cst_output/YulStatement/switch_decimal_trailing_case/generated/0.8.0-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Error: Unexpected UNRECOGNIZED. One of YulDecimalLiteral, YulFalseKeyword_Reserved, YulHexLiteral, YulHexStringLiteral, YulIdentifier, YulStringLiteral, YulTrueKeyword_Reserved was expected
   ╭─[ crates/solidity-v2/testing/snapshots/cst_output/YulStatement/switch_decimal_trailing_case/input.sol:5:8 ]
   │
 5 │ switch 1case 0 {} default {}
   │        ──┬──  
   │          ╰──── Error occurred here.
───╯
